added animation on Home and Comments pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "../node_modules/tailwindcss/index.css";
+@import "tailwindcss-animated";
 
 body html {
   margin: 0;
